deployments/kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hookubit
  labels:
    app.kubernetes.io/name: hookubit
    app.kubernetes.io/part-of: hookubit
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
